--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -1,4 +1,13 @@
 #picture {
   width: 500px;
   float: right;
+  padding: 15px;
+}
+
+#content {
+  border: 2px;
+  background-color: rgba(236, 236, 236, 1);
+  color: black;
+  margin: 20px 10px;
+  padding: 15px;
 }
